Fix issue with overflowing content

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -1,5 +1,8 @@
 body {
     font-family: Segoe UI, Frutiger, Frutiger Linotype, Dejavu Sans, Helvetica Neue, Arial, sans-serif;
+
+    min-height: 100%;
+    background: #464646;
 }
 
 .if-m--main {
@@ -75,7 +78,7 @@ body {
                     }
 
     .if-m--main .if-m--jumbo {
-        margin: 5rem 0 0;
+        margin: 5rem 0 8rem;
     }
 
         .if-m--main .if-m--jumbo .if-m--logo {
